# AskPumas-LLM-Evaluation-Paper

./: .gitignore  README.md  eliminated-llms-appendix.csv  embeddings-llm-output.py  llmrubric.csv  llmrubric.py  main.py  model_options.json  multillm.csv.example  parseprompts.py  prompt_loader.py  prompts.csv.example  pyproject.toml  ragas-output.py  references.bib  research-paper.qmd  results.csv  selected-llms-appendix.csv
llmrubric-results/: LLM-rubric-evaluation.csv
parse-interview-questions/: interview-parse-gpt.py  pyproject.toml
prompts/templates/: system_prompt.j2
ragas-results/: ragas_evaluation.example.csv
